--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@arco-design/web-vue": "^2.0.3",
     "@vitejs/plugin-vue": "^1.9.3",
+    "sass": "^1.43.4",
     "typescript": "^4.4.4",
     "vite": "^2.6.4",
     "vue-tsc": "^0.3.0"
