--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "vue": "^3.2.16",
-    "vue-router": "4"
+    "vue-router": "^4"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.0.3",
     "@types/node": "^17.0.5",
     "@vitejs/plugin-vue": "^1.9.3",
+    "pinia": "^2.0.28",
     "sass": "^1.43.4",
     "typescript": "^4.4.4",
-    "vite": "^2.6.4",
+    "vite": "^4.0.0",
     "vue-tsc": "^0.3.0"
   }
 }
